# ush

./: CMakeLists.txt  Makefile  README.md  log.txt  test  ush
Libmx/: Makefile
Libmx/inc/: libmx.h
Libmx/src/: mx_atoi.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_file_to_str.c  mx_get_char_index.c  mx_isdigit.c  mx_itoa.c  mx_list_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_nbr_to_hex.c  mx_pow.c  mx_print_strarr.c  mx_push_back.c  mx_push_front.c  mx_read_line.c  mx_realloc.c  mx_sqrt.c  (+12 more)
docs/: grammar.md
inc/: environment.h  evaluator.h  i.h  liststr.h  o.h  p.h  parser.h  ush.h
src/: main.c  mx_builtin_cd.c  mx_builtin_echo.c  mx_builtin_echo2.c  mx_builtin_env.c  mx_builtin_exit.c  mx_builtin_export.c  mx_builtin_fg.c  mx_builtin_fg2.c  mx_builtin_jobs.c  mx_builtin_pwd.c  mx_builtin_which.c  mx_builtins.c  mx_check_buffer.c  mx_driver_loop.c  mx_env_delete.c  mx_env_get_value.c  mx_env_init.c  mx_env_new_delete.c  mx_env_set_var.c  mx_environ_copy.c  mx_environ_handler_env.c  mx_eval.c  mx_eval_assignment.c  mx_eval_command_substitution.c  mx_eval_file_expansion.c  mx_eval_logics.c  mx_eval_parameter_expansion.c  mx_eval_redirections.c  mx_eval_redirections1.c  mx_eval_redirections2.c  mx_eval_redirections3.c  mx_eval_redirections4.c  mx_eval_redirections5.c  mx_eval_sequence.c  mx_eval_sequence_pipeline.c  mx_eval_simple_command1.c  mx_eval_simple_command2.c  mx_eval_simple_command3.c  mx_eval_simple_command4.c  (+55 more)
